@YELP_HELP_RULES@

HELP_ID = baobab

# List of figures to be included
HELP_MEDIA =

# List of pages
HELP_FILES = \
	index.page \
	introduction.page \
	pref-view-chart.page \
	scan-file-system.page \
	scan-folder.page \
	scan-home.page \
	scan-remote.page

# List of translations
HELP_LINGUAS = ca cs de el es fr gl hu id pt_BR ru sl zh_CN

-include $(top_srcdir)/git.mk
