@YELP_HELP_RULES@

HELP_ID = baobab

# List of pages
HELP_FILES = \
	index.page \
	introduction.page \
	legal.xml \
	pref-view-chart.page \
	problem-permissions.page \
	problem-slow-scan.page \
	scan-file-system.page \
	scan-folder.page \
	scan-home.page \
	scan-remote.page

# List of figures to be included
HELP_MEDIA = \
	media/hicolor_apps_48x48_baobab.png

# List of translations
HELP_LINGUAS = ca cs de el es fi fr gl hu id it pt_BR ru sl zh_CN

-include $(top_srcdir)/git.mk
