help_files = [
  'index.page',
  'introduction.page',
  'pref-view-chart.page',
  'problem-permissions.page',
  'problem-slow-scan.page',
  'question-open-folder.page',
  'question-trash.page',
  'scan-file-system.page',
  'scan-folder.page',
  'scan-home.page',
  'scan-remote.page',
  'legal.xml'
]

help_media = [
  'media/hicolor_apps_48x48_baobab.png'
]

help_linguas = [
  'ca',
  'cs',
  'da',
  'de',
  'el',
  'es',
  'fi',
  'fr',
  'gl',
  'hu',
  'id',
  'it',
  'ko',
  'pl',
  'pt',
  'pt_BR',
  'ru',
  'sl',
  'sv',
  'zh_CN'
]

gnome.yelp(
  meson.project_name(),
  sources: help_files,
  media: help_media,
  languages: help_linguas,
)
