help_files = [
  'index.page',
  'introduction.page',
  'pref-view-chart.page',
  'problem-permissions.page',
  'problem-slow-scan.page',
  'question-open-folder.page',
  'question-trash.page',
  'scan-file-system.page',
  'scan-folder.page',
  'scan-home.page',
  'scan-remote.page',
  'legal.xml'
]

help_media = [
  'media/org.gnome.baobab.svg'
]

gnome.yelp(
  meson.project_name(),
  sources: help_files,
  media: help_media
)
