SUBDIRS = 24x24 scalable

imagesdir = $(datadir)/baobab/pixmaps
images_DATA =			\
	alfa_sort.png		\
	green.png		\
	red.png			\
	search.png		\
	done.png		\
	scan_directory.png	\
	stop.png		\
	format_numeric.png	\
	nautilus.png		\
	scan_harddisk.png	\
	white.png		\
	busy.gif		\
	format_percent.png	\
	num_sort.png		\
	searchall.png		\
	shot.png		\
	yellow.png

EXTRA_DIST =		\
	$(images_DATA)
